added cloud hosted instructions (#118)
* added cloud hosted instructions

* added link to UI in index.html

* adjusted line spaces

* Update README.adoc

* added cloud hosted instructions

* added colon to command instructions

* Update README.adoc

* fixed broken link

* updated landing page

* fix broken link

* fix broken link

* Update README.adoc

* addressed ID review

Co-authored-by: Gilbert Kwan <gkwan@ca.ibm.com>
Co-authored-by: Griffin Hadfield <griffhadfield@gmail.com>

--- a/finish/src/main/webapp/index.html
+++ b/finish/src/main/webapp/index.html
@@ -17,6 +17,7 @@
 <body>
     <h1>Welcome to your Open Liberty application</h1>
     <p>Open Liberty is a lightweight open framework for building fast and efficient cloud-native Java microservices. Find out more at <a href="http://openliberty.io/" target="_blank" rel="noopener noreferrer">openliberty.io</a>.</p>
+    <p>Check out the <a href="/openapi/ui" target="_blank" rel="noopener noreferrer">interactive UI</a> made with Swagger UI</p>
 <div>
     <h2>Eclipse MicroProfile</h2>
     <p>
