--- a/start/src/main/webapp/index.html
+++ b/start/src/main/webapp/index.html
@@ -35,9 +35,10 @@
             <li><a href="https://openliberty.io/docs/ref/feature/#mpOpenAPI-3.0.html" target="_blank" rel="noopener noreferrer">MicroProfile OpenAPI 3.0</a></li>
             <li><a href="https://openliberty.io/docs/ref/feature/#mpRestClient-3.0.html" target="_blank" rel="noopener noreferrer">MicroProfile Rest Client 3.0</a></li>
             <li><a href="https://openliberty.io/docs/ref/feature/#mpConfig-3.0.html" target="_blank" rel="noopener noreferrer">MicroProfile Config 3.0</a></li>
-            <li><a href="https://openliberty.io/docs/ref/feature/#cdi-4.0.html" target="_blank" rel="noopener noreferrer">Contexts and Dependency Injection 4.0</a></li>
-            <li><a href="https://openliberty.io/docs/ref/feature/#jaxrs-2.1.html" target="_blank" rel="noopener noreferrer">Java RESTful Services 2.1</a></li>
-            <li><a href="https://openliberty.io/docs/ref/feature/#jsonp-2.1.html" target="_blank" rel="noopener noreferrer">JavaScript Object Notation Processing 2.1</a></li>
+            <li><a href="https://openliberty.io/docs/ref/feature/#cdi-3.0.html" target="_blank" rel="noopener noreferrer">Contexts and Dependency Injection 3.0</a></li>
+            <li><a href="https://openliberty.io/docs/ref/feature/#restfulWS-3.0.html" target="_blank" rel="noopener noreferrer">Java RESTful Services 3.0</a></li>
+            <li><a href="https://openliberty.io/docs/ref/feature/#jsonp-2.0.html" target="_blank" rel="noopener noreferrer">JavaScript Object Notation Processing 2.0</a></li>
+            <li><a href="https://openliberty.io/docs/ref/feature/#jsonb-2.0.html" target="_blank" rel="noopener noreferrer">JavaScript Object Notation Binding 2.0</a></li>
         </ul>
     </p>
 </div>
